Stealth roll